Fix unnecessary scrollbar on mobile devices

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h6 {
 }
 
 .layout {
-    min-height: 100vh;
+    min-height: 100dvh;
     display: grid;
     place-content: center;
 }
